--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>hello thi sis Ann's and Max's Movie website</h1>
+    <h2>this is the second thing</h2>
     <link rel="stylesheet" href="./app/js/all.js">
     <script src="./app/js/bootstrap.bundle.js"></script>
     <script src="./app/js/main.js"></script>
