--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <h1>hello thi sis Ann's and Max's Movie website</h1>
     <h2>this is the second thing</h2>
+    <h2>this is the third commit</h2>
     <link rel="stylesheet" href="./app/js/all.js">
     <script src="./app/js/bootstrap.bundle.js"></script>
     <script src="./app/js/main.js"></script>
