--- a/app/pages/tvshows.html
+++ b/app/pages/tvshows.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mannix</title>
-    <link rel="stylesheet" href="./app/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./app/css/styles.css">
+    <title>Tv Shows</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -24,19 +24,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./app/pages/tvshows.html">Tv shows</a>
+                <a class="nav-link" href="./tvshows.html">Tv shows</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./app/pages/movies.html">Movies</a>
+                <a class="nav-link" href="./movies.html">Movies</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./app/pages/popular.html">New & Popular</a>
+                <a class="nav-link" href="./popular.html">New & Popular</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./app/pages/mylist.html">My List</a>
+                <a class="nav-link" href="./mylist.html">My List</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -46,22 +46,6 @@
           </div>
         </div>
       </nav>
-
-      <!-- this is the start of the banner -->
-      <div class="container-fluid banner">
-        <div class="row one">
-          <h1>You</h1>
-        </div>
-
-        <div class="row two">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus quasi quia recusandae consectetur similique, eligendi laudantium, cumque accusamus est porro reprehenderit maiores provident? Harum ad eius totam quibusdam provident quasi.</p>
-        </div>
-
-        <div class="row three">
-          <button class="btn-primary"><i class="fa-solid fa-play"></i>Play</button>
-          <button class="btn-primary"><i class="fa-light fa-circle-info"></i>More info</button>
-        </div>
-      </div>
 
       <!-- this is the start of the footer  -->
       <div class="container mx-auto">
@@ -94,8 +78,8 @@
 
       </div>
 
-    <script src="./app/js/all.js"></script>
-    <script src="./app/js/bootstrap.bundle.js"></script>
-    <script src="./app/js/main.js"></script>
+    <script src="../js/all.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
